src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Record_Type__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allocated_to__c</fullName>
        <label>Allocated to</label>
        <picklist>
            <picklistValues>
                <fullName>Neil Whiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Blick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luke Glover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BTA_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this task a BTA Activity? (for use in Chatter publisher)</description>
        <label>BTA Activity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <label>Close</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collaboration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collaboration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Info__c</fullName>
        <label>Deadline for Info</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_require_marketing_info__c</fullName>
        <label>Do You Require Marketing Info?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event Description</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impromptu Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal Entertaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting with Meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Marketing_Contact__c</fullName>
        <label>Internal Marketing Contact</label>
        <picklist>
            <controllingField>Internal_Marketing_Department__c</controllingField>
            <picklistValues>
                <fullName>Adam Lawrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anita Tejada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Blick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Mahoney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neil Whiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Iddon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Marketing_Department__c</fullName>
        <label>Internal Marketing Department</label>
        <picklist>
            <picklistValues>
                <fullName>London Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Classified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is new business?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Role__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <label>Last Modified By User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <label>Match</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migrated_TaskId__c</fullName>
        <description>Used for Migration purposes. Always try to update this field during migration from other systems</description>
        <externalId>true</externalId>
        <label>Migrated TaskId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <label>Open</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>IF(BEGINS(WhatId, &apos;006&apos;),WhatId,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineffective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prepare__c</fullName>
        <label>Prepare</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probe__c</fullName>
        <label>Probe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Agenda__c</fullName>
        <label>Proposed Agenda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Meeting__c</fullName>
        <label>Purpose of Meeting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <formula>IF( BEGINS(WhatId, &apos;006&apos;), &apos;Pitch&apos;, 
IF( BEGINS(WhatId, &apos;701&apos;), &apos;Campaign&apos;,
IF( BEGINS(WhatId, &apos;a02&apos;), &apos;Business Team Activity&apos;,
IF( BEGINS(WhatId, &apos;001&apos;), &apos;Account&apos;, 
&apos;Other&apos; ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Arranged</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Event__c</fullName>
        <label>Type of Event</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency/Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Agency/Client Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Agency Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Client Function</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_How_Often_Does_Customer_Advertise__c</fullName>
        <label>Where/How Often Does Customer Advertise</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>